[gd_scene load_steps=4 format=3 uid="uid://dbr8wu7wd61yn"]

[ext_resource type="PackedScene" uid="uid://bilyy5eu7pu25" path="res://view/team_score/team_score.tscn" id="1_t2pjw"]
[ext_resource type="Script" path="res://view/hud/hud.gd" id="1_ugug4"]
[ext_resource type="PackedScene" uid="uid://cfv115rx3u3fr" path="res://view/combatant_details/combatant_details.tscn" id="3_6i1ko"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ugug4")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -576.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="FirstTeamScore" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_t2pjw")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="SecondTeamScore" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_t2pjw")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
custom_position = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 285)
layout_mode = 2

[node name="CombatantDetails" parent="MarginContainer/HBoxContainer/Control" instance=ExtResource("3_6i1ko")]
unique_name_in_owner = true
